docs: rewrite 6.5 to remove existing

--- a/docs/stories/6.5.intro-finale-screens.md
+++ b/docs/stories/6.5.intro-finale-screens.md
@@ -1,728 +1,391 @@
-# Story 6.5: Create Story Introduction and Finale Screens
+# Story 6.5: Enhance Story Intro & Finale Screens
 
 ## Status
 
 Draft
 
+## Parent Story
+
+[Story 6.4: Create Story Mode Flow](./6.4.integrate-story-checkpoints.md)
+
+## Dependencies
+
+**Required (Must be complete first):**
+- ✅ Story 6.4c: Story Intro & Finale Screens (base implementation)
+
 ## Story
 
 **As a** child,
-**I want** to see a story introduction when I start and a finale when I finish,
-**so that** the experience has a clear beginning and satisfying ending.
+**I want** enhanced intro/finale screens with persistent tracking and more options,
+**so that** I have a personalized experience that remembers my progress and gives me clear choices.
 
 ## Acceptance Criteria
 
-1. Story intro screen displays when starting a new word list for the first time
-2. Intro includes: character introduction, narrative setup, "Let's Begin" button
-3. Story finale screen displays when all words in list reach mastery (>80% confidence)
-4. Finale includes: celebration animation, congratulatory message, character completion visual
-5. Finale shows summary: words mastered, games played, time spent
-6. Finale offers options: "Practice More", "Try New Words", "View Progress"
-7. Intro and finale are visually distinct and celebratory
-8. Screens are responsive and work on mobile and desktop
+1. Intro screen only shows once per word list (tracked in IndexedDB)
+2. Intro screen has optional "Skip Intro" button
+3. Intro screen displays word list name
+4. Finale screen shows enhanced stats: words mastered, games played, time spent
+5. Finale screen has 3 action buttons: "Practice More", "Try New Words", "View Progress"
+6. Finale screen displays word list name
+7. Custom hooks abstract intro/finale logic from components
+8. Stats calculation helper computes session metrics
+9. StorySessionMachine guards check intro tracking status
+10. All features maintain existing responsive design and animations
+11. TypeScript types updated throughout
+12. Tests verify new features
 
 ## Tasks / Subtasks
 
-- [ ] Create StoryIntroScreen component (AC: 1, 2, 7, 8)
-  - [ ] Create file `/components/story/StoryIntroScreen.tsx`
-  - [ ] Component props:
+- [ ] Add IndexedDB intro tracking
+  - [ ] Create storage functions in `lib/storage/story-progress-storage.ts`:
+    - `hasSeenStoryIntro(wordListId: string): Promise<boolean>`
+    - `markStoryIntroAsSeen(wordListId: string): Promise<void>`
+  - [ ] Use existing IndexedDB setup from story progress storage
+  - [ ] Store data as: `{ wordListId, hasSeenIntro: true, timestamp }`
+  - [ ] Handle errors gracefully (default to showing intro on failure)
+  - [ ] Add JSDoc documentation
+
+- [ ] Update StoryIntroScreen component
+  - [ ] Add `wordListName: string` prop to interface
+  - [ ] Add `onSkip?: () => void` optional prop
+  - [ ] Display word list name in narrative area
+  - [ ] Add "Skip Intro" button (small, bottom-right corner)
+  - [ ] Update component tests to verify new props
+  - [ ] Maintain existing animations and responsive design
+
+- [ ] Update StoryFinaleScreen component
+  - [ ] Add `wordListName: string` prop to interface
+  - [ ] Expand `stats` prop to include:
     ```typescript
-    interface StoryIntroScreenProps {
-      theme: string
-      wordListName: string
-      wordCount: number
-      onBegin: () => void
+    stats: {
+      totalWords: number
+      wordsMastered: number
+      gamesPlayed: number
+      timeSpent: number // in seconds
+      averageConfidence: number
     }
     ```
-  - [ ] Full-screen layout with background
-  - [ ] Character introduction visual
-  - [ ] Narrative text from story content
-  - [ ] "Let's Begin!" call-to-action button
-  - [ ] Responsive design for mobile/desktop
+  - [ ] Add `onTryNewWords: () => void` callback prop
+  - [ ] Display word list name in finale narrative
+  - [ ] Add third button: "Try New Words ✨"
+  - [ ] Update button layout for 3-button grid
+  - [ ] Display all 5 stats in enhanced stats grid
+  - [ ] Format time as "X minutes" or "X min Y sec"
+  - [ ] Update component tests to verify new features
+  - [ ] Maintain existing confetti and animations
 
-- [ ] Design intro screen layout (AC: 2, 7)
-  - [ ] Background: First environment from theme (e.g., space station)
-  - [ ] Character: Large, centered character sprite (neutral pose)
-  - [ ] Title: "Begin Your Adventure" or theme-specific title
-  - [ ] Narrative: Intro narrative from story content
-  - [ ] Word list info: "Ready to master {wordCount} words?"
-  - [ ] CTA button: Large, prominent "Let's Begin!" button
-  - [ ] Visual style: Exciting, welcoming, child-friendly
-
-- [ ] Implement intro animations (AC: 7)
-  - [ ] Background fade in (500ms)
-  - [ ] Character slides in or zooms in (Framer Motion)
-  - [ ] Text appears with stagger effect
-  - [ ] Button pulses or glows to attract attention
-  - [ ] Optional: Sparkles or stars animation
-  - [ ] Smooth transitions throughout
-
-- [ ] Create StoryFinaleScreen component (AC: 3, 4, 7, 8)
-  - [ ] Create file `/components/story/StoryFinaleScreen.tsx`
-  - [ ] Component props:
+- [ ] Create stats calculation helper
+  - [ ] Create `lib/game/calculate-session-stats.ts`
+  - [ ] Export function:
     ```typescript
-    interface StoryFinaleScreenProps {
-      theme: string
-      wordListName: string
-      stats: {
-        wordsMastered: number
-        gamesPlayed: number
-        timeSpent: number
-        totalWords: number
-      }
-      onPracticeMore: () => void
-      onTryNewWords: () => void
-      onViewProgress: () => void
-    }
+    export function calculateSessionStats(
+      wordStats: Map<string, WordStats>,
+      gameResults: GameResult[],
+      sessionStartTime: number
+    ): SessionStats
     ```
-  - [ ] Full-screen layout with finale background
-  - [ ] Celebration visuals and animations
-  - [ ] Summary statistics display
-  - [ ] Action buttons for next steps
-  - [ ] Responsive design
+  - [ ] Calculate total words from wordStats.size
+  - [ ] Calculate words mastered (confidence >= 0.8)
+  - [ ] Calculate games played from gameResults.length
+  - [ ] Calculate time spent: `Date.now() - sessionStartTime`
+  - [ ] Calculate average confidence from wordStats
+  - [ ] Add unit tests for edge cases (empty stats, etc.)
+  - [ ] Add JSDoc documentation
 
-- [ ] Design finale screen layout (AC: 4, 5, 6, 7)
-  - [ ] Background: Final environment from theme (e.g., stars field)
-  - [ ] Character: Celebrating pose (arms raised, happy)
-  - [ ] Title: "Mission Complete!" or theme-specific
-  - [ ] Narrative: Finale narrative from story content
-  - [ ] Stats panel:
-    - "✅ {X} Words Mastered"
-    - "🎮 {Y} Games Played"
-    - "⏱️ {Z} Minutes of Practice"
-  - [ ] Action buttons: Three clear options
-  - [ ] Trophy or badge visual
-
-- [ ] Implement finale animations (AC: 4, 7)
-  - [ ] Confetti celebration (react-confetti)
-  - [ ] Fireworks or stars bursting effect
-  - [ ] Character celebration animation
-  - [ ] Trophy/badge reveal with zoom effect
-  - [ ] Stats count up animation (number incrementing)
-  - [ ] Button entrance with stagger
-  - [ ] Overall: Highly celebratory and rewarding feel
-
-- [ ] Add intro trigger logic (AC: 1)
-  - [ ] Detect when starting a new word list
-  - [ ] Check if story intro has been seen for this list
-  - [ ] Store flag in IndexedDB: `storyIntroSeen: { [listId]: boolean }`
-  - [ ] GameSessionMachine state:
-    ```typescript
-    states: {
-      initializing: {
-        always: [
-          {
-            guard: 'shouldShowStoryIntro',
-            target: 'showingIntro'
-          },
-          { target: 'selectingGame' }
-        ]
-      },
-      showingIntro: {
-        on: {
-          BEGIN_STORY: {
-            target: 'selectingGame',
-            actions: 'markIntroAsSeen'
-          }
-        }
-      }
-    }
-    ```
-
-- [ ] Add finale trigger logic (AC: 3)
-  - [ ] Monitor word confidence scores via AdaptiveEngineMachine
-  - [ ] Detect when all words >= 80% confidence
-  - [ ] Transition GameSessionMachine to `showingFinale` state
-  - [ ] Calculate stats from session context:
-    ```typescript
-    guards: {
-      shouldShowFinale: ({ context }) => {
-        const allWordsMastered = context.words.every(
-          word => context.adaptiveEngine.getConfidence(word) >= 0.8
-        )
-        return allWordsMastered
-      }
-    }
-    ```
-
-- [ ] Create stats calculation helper (AC: 5)
-  - [ ] Create `/lib/stats/calculate-session-stats.ts`:
-    ```typescript
-    export function calculateSessionStats(sessionData) {
-      return {
-        wordsMastered: sessionData.words.filter(w => w.confidence >= 0.8).length,
-        gamesPlayed: sessionData.gameResults.length,
-        timeSpent: calculateTotalTime(sessionData.startTime, Date.now()),
-        totalWords: sessionData.words.length,
-        averageConfidence: calculateAverage(sessionData.words.map(w => w.confidence))
-      }
-    }
-    ```
-  - [ ] Format time in minutes or hours
-  - [ ] Round percentages appropriately
-
-- [ ] Implement intro content integration (AC: 2)
-  - [ ] Load intro from `/lib/story/content.ts`
-  - [ ] Interpolate word count into narrative
-  - [ ] Display theme-specific content
-  - [ ] Load appropriate character and background images
-
-- [ ] Implement finale content integration (AC: 4)
-  - [ ] Load finale from `/lib/story/content.ts`
-  - [ ] Interpolate stats into narrative if template variables used
-  - [ ] Display completion character sprite
-  - [ ] Load finale background image
-
-- [ ] Create action button handlers (AC: 6)
-  - [ ] "Practice More" → Reset session, continue with same word list
-  - [ ] "Try New Words" → Navigate to word list selection/creation
-  - [ ] "View Progress" → Navigate to dashboard
-  - [ ] Buttons clearly labeled and visually distinct
-  - [ ] Track button selections for analytics
-
-- [ ] Add responsive design (AC: 8)
-  - [ ] Mobile (375px):
-    - Vertical layout
-    - Smaller character sprites
-    - Stacked buttons
-    - Readable text sizes
-  - [ ] Tablet (768px):
-    - Balanced layout
-    - Medium character sprites
-    - Two-column button layout
-  - [ ] Desktop (1920px):
-    - Cinematic layout
-    - Large character sprites
-    - Horizontal button row
-  - [ ] Test all breakpoints
-
-- [ ] Create skip/replay options
-  - [ ] Intro: Small "Skip Intro" button (don't encourage, but allow)
-  - [ ] Finale: Can replay finale animation
-  - [ ] Remember preference for future sessions (optional)
-
-- [ ] Handle edge cases
-  - [ ] User closes browser during intro/finale: Don't re-show
-  - [ ] Multiple word lists: Track intro seen per list
-  - [ ] Partial mastery: Don't show finale until ALL words mastered
-  - [ ] Session timeout: Finale available on return if mastery achieved
-
-- [ ] Create React hooks
-  - [ ] Create `/hooks/useStoryIntro.ts`:
+- [ ] Create useStoryIntro custom hook
+  - [ ] Create `lib/hooks/useStoryIntro.ts`
+  - [ ] Hook interface:
     ```typescript
     export function useStoryIntro(wordListId: string) {
       const [hasSeenIntro, setHasSeenIntro] = useState(false)
+      const [isLoading, setIsLoading] = useState(true)
 
-      useEffect(() => {
-        // Load from IndexedDB
-        const seen = await loadIntroSeenStatus(wordListId)
-        setHasSeenIntro(seen)
-      }, [wordListId])
-
-      const markIntroAsSeen = async () => {
-        await saveIntroSeenStatus(wordListId, true)
-        setHasSeenIntro(true)
-      }
-
-      return { hasSeenIntro, markIntroAsSeen }
+      // Load status from IndexedDB on mount
+      // Return { hasSeenIntro, isLoading, markAsSeen }
     }
     ```
-  - [ ] Create `/hooks/useStoryFinale.ts`:
+  - [ ] Load intro seen status from IndexedDB on mount
+  - [ ] Provide `markAsSeen()` function to update status
+  - [ ] Handle loading state properly
+  - [ ] Handle errors (default to not seen)
+
+- [ ] Create useStoryFinale custom hook
+  - [ ] Create `lib/hooks/useStoryFinale.ts`
+  - [ ] Hook interface:
     ```typescript
-    export function useStoryFinale() {
-      const stats = useSessionStats()
-      const shouldShowFinale = stats.allWordsMastered
-
-      return { shouldShowFinale, stats }
+    export function useStoryFinale(
+      wordStats: Map<string, WordStats>,
+      gameResults: GameResult[],
+      sessionStartTime: number
+    ) {
+      // Calculate if should show finale
+      // Calculate stats
+      // Return { shouldShowFinale, stats }
     }
     ```
+  - [ ] Use calculateSessionStats helper
+  - [ ] Determine shouldShowFinale: all words >= 80% confidence
+  - [ ] Memoize calculations to prevent re-renders
 
-- [ ] Create component tests
-  - [ ] Create test file `/components/story/StoryIntroScreen.test.tsx`
-  - [ ] Test: Renders intro content
-  - [ ] Test: Begin button calls onBegin
-  - [ ] Test: Displays word count
-  - [ ] Test: Responsive layout works
-  - [ ] Create test file `/components/story/StoryFinaleScreen.test.tsx`
-  - [ ] Test: Renders finale content
-  - [ ] Test: Displays stats correctly
-  - [ ] Test: All action buttons work
-  - [ ] Test: Animations render without errors
-  - [ ] Run tests with `npm run test`
+- [ ] Update StorySessionMachine
+  - [ ] Add `wordListId: string` to machine context
+  - [ ] Add `hasSeenIntro: boolean` to machine context
+  - [ ] Add `sessionStartTime: number` to machine context
+  - [ ] Update `shouldShowStoryIntro` guard:
+    ```typescript
+    shouldShowStoryIntro: ({ context }) => {
+      return !context.hasSeenIntro && context.storyModeEnabled
+    }
+    ```
+  - [ ] Add `markIntroAsSeen` action to update context
+  - [ ] Add `SKIP_INTRO` event handler (same behavior as START_STORY)
+  - [ ] Add `TRY_NEW_WORDS` event handler to navigate to word lists
+
+- [ ] Update app/story/page.tsx integration
+  - [ ] Use `useStoryIntro` hook to load intro status
+  - [ ] Pass wordListId to machine input
+  - [ ] Pass sessionStartTime to machine context
+  - [ ] Update StoryIntroScreen props:
+    ```typescript
+    <StoryIntroScreen
+      introContent={state.context.introContent}
+      theme={state.context.storyTheme}
+      wordListName={state.context.wordList.name}
+      onStart={() => send({ type: 'START_STORY' })}
+      onSkip={() => send({ type: 'SKIP_INTRO' })}
+    />
+    ```
+  - [ ] Update StoryFinaleScreen props:
+    ```typescript
+    <StoryFinaleScreen
+      finaleContent={state.context.finaleContent}
+      wordListName={state.context.wordList.name}
+      stats={calculateSessionStats(...)}
+      onPlayAgain={() => send({ type: 'RESTART_STORY' })}
+      onTryNewWords={() => send({ type: 'TRY_NEW_WORDS' })}
+      onViewProgress={() => router.push('/dashboard')}
+    />
+    ```
+
+- [ ] Update TypeScript types
+  - [ ] Update `StoryIntroScreenProps` in component
+  - [ ] Update `StoryFinaleScreenProps` in component
+  - [ ] Add `SessionStats` type to `types/session.ts`:
+    ```typescript
+    export interface SessionStats {
+      totalWords: number
+      wordsMastered: number
+      gamesPlayed: number
+      timeSpent: number
+      averageConfidence: number
+    }
+    ```
+  - [ ] Update machine context types
+
+- [ ] Update component tests
+  - [ ] **StoryIntroScreen.test.tsx** - Add tests:
+    - Test: Word list name displays correctly
+    - Test: Skip button calls onSkip
+    - Test: Skip button is optional (doesn't break if undefined)
+  - [ ] **StoryFinaleScreen.test.tsx** - Add tests:
+    - Test: Word list name displays correctly
+    - Test: All 5 stats display correctly
+    - Test: Time formats correctly (minutes/seconds)
+    - Test: "Try New Words" button calls onTryNewWords
+    - Test: 3-button layout renders correctly
+  - [ ] Run tests with `pnpm test`
 
 - [ ] Create integration tests
-  - [ ] Test: Intro shows when starting new word list
-  - [ ] Test: Intro doesn't show on subsequent sessions
-  - [ ] Test: Finale shows when all words mastered
-  - [ ] Test: Stats calculated correctly
-  - [ ] Test: Action buttons navigate correctly
-  - [ ] Run tests with `npm run test`
+  - [ ] Create `__tests__/story-intro-tracking.test.ts`
+  - [ ] Test: Intro shows on first visit to word list
+  - [ ] Test: Intro doesn't show on second visit
+  - [ ] Test: Skip intro marks as seen
+  - [ ] Test: Different word lists have independent tracking
+  - [ ] Create `__tests__/story-finale-stats.test.ts`
+  - [ ] Test: Stats calculate correctly from session data
+  - [ ] Test: Time spent updates during session
+  - [ ] Test: All 3 finale buttons navigate correctly
+
+- [ ] Create unit tests for helpers
+  - [ ] Create `lib/game/calculate-session-stats.test.ts`
+  - [ ] Test: Calculates all stats correctly
+  - [ ] Test: Handles empty stats gracefully
+  - [ ] Test: Handles edge cases (0 games, 0 time)
+  - [ ] Test: Averages confidence correctly
 
 ## Dev Notes
 
-### Architecture Context
+### Key Enhancements Over Story 6.4c
 
-**StoryIntroScreen Component:**
+**Story 6.4c provided:**
+- Base StoryIntroScreen and StoryFinaleScreen components
+- Integration with StorySessionMachine
+- Basic animations and confetti
+- Component tests
+
+**Story 6.5 adds:**
+1. **Persistent Intro Tracking** - IndexedDB remembers if intro was seen per word list
+2. **Skip Intro Option** - Users can skip intro if they've seen it before
+3. **Enhanced Stats** - Shows games played and time spent (not just word counts)
+4. **Third Finale Button** - "Try New Words" option for better navigation
+5. **Word List Context** - Displays which word list the story is about
+6. **Custom Hooks** - Cleaner abstraction with useStoryIntro and useStoryFinale
+7. **Stats Helper** - Reusable calculateSessionStats function
+
+### Component Props Evolution
+
+**Before (6.4c):**
 ```typescript
-'use client'
-
-import { motion } from 'framer-motion'
-import { getStoryContent, interpolateContent } from '@/lib/story/content'
-import { STORY_ASSETS } from '@/lib/story/assets'
-
 interface StoryIntroScreenProps {
+  introContent: { title: string; narrative: string; celebrationEmoji?: string } | null
   theme: string
-  wordListName: string
-  wordCount: number
-  onBegin: () => void
+  onStart: () => void
 }
-
-export function StoryIntroScreen({
-  theme = 'space',
-  wordListName,
-  wordCount,
-  onBegin
-}: StoryIntroScreenProps) {
-  const content = getStoryContent(theme)
-  const assets = STORY_ASSETS[theme]
-
-  return (
-    <motion.div
-      className="fixed inset-0 z-50 flex items-center justify-center overflow-hidden"
-      initial={{ opacity: 0 }}
-      animate={{ opacity: 1 }}
-      transition={{ duration: 0.8 }}
-    >
-      {/* Background */}
-      <div
-        className="absolute inset-0 bg-cover bg-center"
-        style={{ backgroundImage: `url(${assets.backgrounds.intro})` }}
-      />
-
-      {/* Gradient Overlay */}
-      <div className="absolute inset-0 bg-gradient-to-b from-purple-900/50 to-blue-900/50" />
-
-      {/* Character */}
-      <motion.img
-        src={assets.characters.neutral}
-        alt="Story character"
-        className="absolute bottom-0 left-1/2 -translate-x-1/2 w-64 h-64 md:w-96 md:h-96"
-        initial={{ y: 100, opacity: 0 }}
-        animate={{ y: 0, opacity: 1 }}
-        transition={{ type: 'spring', delay: 0.5 }}
-      />
-
-      {/* Content Box */}
-      <motion.div
-        className="relative z-10 max-w-3xl mx-auto p-8 md:p-12 text-center"
-        initial={{ y: -50, opacity: 0 }}
-        animate={{ y: 0, opacity: 1 }}
-        transition={{ delay: 0.8 }}
-      >
-        <h1 className="text-5xl md:text-7xl font-bold text-white mb-6 drop-shadow-lg">
-          {content.intro.title}
-        </h1>
-
-        <div className="text-6xl mb-6">{content.intro.celebrationEmoji}</div>
-
-        <p className="text-2xl md:text-3xl text-white mb-4 leading-relaxed drop-shadow-md">
-          {content.intro.narrative}
-        </p>
-
-        <p className="text-xl text-yellow-300 mb-8 font-semibold">
-          Ready to master {wordCount} words from "{wordListName}"?
-        </p>
-
-        <motion.button
-          onClick={onBegin}
-          className="px-12 py-4 bg-gradient-to-r from-yellow-400 to-orange-500 text-white text-2xl font-bold rounded-full shadow-2xl hover:scale-105 transition-transform"
-          whileHover={{ scale: 1.1 }}
-          whileTap={{ scale: 0.95 }}
-          animate={{ scale: [1, 1.05, 1] }}
-          transition={{ repeat: Infinity, duration: 2 }}
-        >
-          Let's Begin! 🚀
-        </motion.button>
-      </motion.div>
-    </motion.div>
-  )
-}
-```
-
-**StoryFinaleScreen Component:**
-```typescript
-'use client'
-
-import { motion } from 'framer-motion'
-import { useState, useEffect } from 'react'
-import Confetti from 'react-confetti'
-import { getStoryContent } from '@/lib/story/content'
-import { STORY_ASSETS } from '@/lib/story/assets'
 
 interface StoryFinaleScreenProps {
-  theme: string
-  wordListName: string
-  stats: {
-    wordsMastered: number
-    gamesPlayed: number
-    timeSpent: number
-    totalWords: number
-  }
-  onPracticeMore: () => void
-  onTryNewWords: () => void
-  onViewProgress: () => void
-}
-
-export function StoryFinaleScreen({
-  theme = 'space',
-  wordListName,
-  stats,
-  onPracticeMore,
-  onTryNewWords,
-  onViewProgress
-}: StoryFinaleScreenProps) {
-  const [countUpComplete, setCountUpComplete] = useState(false)
-  const content = getStoryContent(theme)
-  const assets = STORY_ASSETS[theme]
-
-  useEffect(() => {
-    const timer = setTimeout(() => setCountUpComplete(true), 3000)
-    return () => clearTimeout(timer)
-  }, [])
-
-  return (
-    <motion.div
-      className="fixed inset-0 z-50 flex items-center justify-center overflow-hidden"
-      initial={{ opacity: 0 }}
-      animate={{ opacity: 1 }}
-    >
-      {/* Background */}
-      <div
-        className="absolute inset-0 bg-cover bg-center"
-        style={{ backgroundImage: `url(${assets.backgrounds.finale})` }}
-      />
-
-      {/* Confetti */}
-      <Confetti recycle={false} numberOfPieces={500} />
-
-      {/* Character Celebrating */}
-      <motion.img
-        src={assets.characters.celebrating}
-        alt="Character celebrating"
-        className="absolute bottom-0 right-10 w-64 h-64 md:w-96 md:h-96"
-        initial={{ scale: 0, rotate: -180 }}
-        animate={{ scale: 1, rotate: 0 }}
-        transition={{ type: 'spring', delay: 0.5 }}
-      />
-
-      {/* Trophy */}
-      <motion.div
-        className="absolute top-20 left-1/2 -translate-x-1/2 text-9xl"
-        initial={{ scale: 0, y: -100 }}
-        animate={{ scale: 1, y: 0 }}
-        transition={{ type: 'spring', delay: 1 }}
-      >
-        🏆
-      </motion.div>
-
-      {/* Content */}
-      <div className="relative z-10 max-w-4xl mx-auto p-8">
-        <motion.div
-          className="bg-white/95 rounded-3xl shadow-2xl p-8 md:p-12"
-          initial={{ scale: 0.8, opacity: 0 }}
-          animate={{ scale: 1, opacity: 1 }}
-          transition={{ delay: 0.3 }}
-        >
-          <div className="text-center mb-8">
-            <h1 className="text-5xl md:text-6xl font-bold text-purple-700 mb-4">
-              {content.finale.title}
-            </h1>
-            <p className="text-2xl text-gray-700 leading-relaxed">
-              {content.finale.narrative}
-            </p>
-          </div>
-
-          {/* Stats */}
-          <div className="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
-            <StatCard
-              icon="✅"
-              value={stats.wordsMastered}
-              label="Words Mastered"
-              delay={0.5}
-            />
-            <StatCard
-              icon="🎮"
-              value={stats.gamesPlayed}
-              label="Games Played"
-              delay={0.7}
-            />
-            <StatCard
-              icon="⏱️"
-              value={Math.round(stats.timeSpent / 60)}
-              label="Minutes Practiced"
-              delay={0.9}
-            />
-          </div>
-
-          {/* Action Buttons */}
-          <div className="flex flex-col md:flex-row gap-4 justify-center">
-            <motion.button
-              onClick={onPracticeMore}
-              className="px-8 py-3 bg-blue-500 text-white rounded-lg font-semibold hover:bg-blue-600 transition-colors"
-              whileHover={{ scale: 1.05 }}
-              whileTap={{ scale: 0.95 }}
-            >
-              Practice More 📝
-            </motion.button>
-            <motion.button
-              onClick={onTryNewWords}
-              className="px-8 py-3 bg-green-500 text-white rounded-lg font-semibold hover:bg-green-600 transition-colors"
-              whileHover={{ scale: 1.05 }}
-              whileTap={{ scale: 0.95 }}
-            >
-              Try New Words ✨
-            </motion.button>
-            <motion.button
-              onClick={onViewProgress}
-              className="px-8 py-3 bg-purple-500 text-white rounded-lg font-semibold hover:bg-purple-600 transition-colors"
-              whileHover={{ scale: 1.05 }}
-              whileTap={{ scale: 0.95 }}
-            >
-              View Progress 📊
-            </motion.button>
-          </div>
-        </motion.div>
-      </div>
-    </motion.div>
-  )
-}
-
-function StatCard({ icon, value, label, delay }: any) {
-  const [displayValue, setDisplayValue] = useState(0)
-
-  useEffect(() => {
-    const duration = 2000
-    const steps = 60
-    const increment = value / steps
-    let current = 0
-
-    const timer = setInterval(() => {
-      current += increment
-      if (current >= value) {
-        setDisplayValue(value)
-        clearInterval(timer)
-      } else {
-        setDisplayValue(Math.floor(current))
-      }
-    }, duration / steps)
-
-    return () => clearInterval(timer)
-  }, [value])
-
-  return (
-    <motion.div
-      className="bg-gradient-to-br from-purple-100 to-blue-100 rounded-xl p-6 text-center"
-      initial={{ scale: 0, opacity: 0 }}
-      animate={{ scale: 1, opacity: 1 }}
-      transition={{ delay }}
-    >
-      <div className="text-5xl mb-2">{icon}</div>
-      <div className="text-4xl font-bold text-purple-700 mb-1">
-        {displayValue}
-      </div>
-      <div className="text-sm text-gray-600 font-semibold">{label}</div>
-    </motion.div>
-  )
+  finaleContent: { title: string; narrative: string; celebrationEmoji?: string } | null
+  wordStats: Map<string, WordStats>
+  onPlayAgain: () => void
 }
 ```
 
-**GameSessionMachine Integration:**
+**After (6.5):**
 ```typescript
-export const gameSessionMachine = createMachine({
-  states: {
-    initializing: {
-      always: [
-        {
-          guard: 'shouldShowStoryIntro',
-          target: 'showingIntro'
-        },
-        { target: 'selectingGame' }
-      ]
-    },
-    showingIntro: {
-      on: {
-        BEGIN_STORY: {
-          target: 'selectingGame',
-          actions: 'markIntroAsSeen'
-        }
-      }
-    },
-    // ... game states
-    completed: {
-      always: [
-        {
-          guard: 'shouldShowFinale',
-          target: 'showingFinale'
-        },
-        {
-          guard: 'shouldShowCheckpoint',
-          target: 'showingCheckpoint'
-        },
-        { target: 'selectingGame' }
-      ]
-    },
-    showingFinale: {
-      on: {
-        PRACTICE_MORE: 'selectingGame',
-        TRY_NEW_WORDS: { actions: 'navigateToWordLists' },
-        VIEW_PROGRESS: { actions: 'navigateToDashboard' }
-      }
-    }
+interface StoryIntroScreenProps {
+  introContent: { title: string; narrative: string; celebrationEmoji?: string } | null
+  theme: string
+  wordListName: string // NEW
+  onStart: () => void
+  onSkip?: () => void // NEW
+}
+
+interface StoryFinaleScreenProps {
+  finaleContent: { title: string; narrative: string; celebrationEmoji?: string } | null
+  wordListName: string // NEW
+  stats: SessionStats // ENHANCED (was wordStats Map)
+  onPlayAgain: () => void
+  onTryNewWords: () => void // NEW
+  onViewProgress: () => void
+}
+```
+
+### IndexedDB Storage Schema
+
+```typescript
+// Store in 'story_intro_tracking' object store
+interface StoryIntroTracking {
+  wordListId: string // Primary key
+  hasSeenIntro: boolean
+  timestamp: number
+}
+```
+
+### Stats Calculation Example
+
+```typescript
+// lib/game/calculate-session-stats.ts
+export function calculateSessionStats(
+  wordStats: Map<string, WordStats>,
+  gameResults: GameResult[],
+  sessionStartTime: number
+): SessionStats {
+  const totalWords = wordStats.size
+  const wordsMastered = Array.from(wordStats.values())
+    .filter(stats => stats.confidence >= 0.8).length
+
+  const confidenceValues = Array.from(wordStats.values())
+    .map(stats => stats.confidence)
+  const averageConfidence = confidenceValues.length > 0
+    ? confidenceValues.reduce((sum, val) => sum + val, 0) / confidenceValues.length
+    : 0
+
+  const gamesPlayed = gameResults.length
+  const timeSpent = Math.floor((Date.now() - sessionStartTime) / 1000) // seconds
+
+  return {
+    totalWords,
+    wordsMastered,
+    gamesPlayed,
+    timeSpent,
+    averageConfidence
   }
-}, {
-  guards: {
-    shouldShowStoryIntro: ({ context }) => {
-      return !context.hasSeenIntro && context.storyModeEnabled
-    },
-    shouldShowFinale: ({ context }) => {
-      return context.words.every(w => context.confidenceScores[w] >= 0.8)
-    }
-  },
-  actions: {
-    markIntroAsSeen: assign({ hasSeenIntro: true }),
-    navigateToWordLists: () => {
-      window.location.href = '/word-lists'
-    },
-    navigateToDashboard: () => {
-      window.location.href = '/dashboard'
-    }
-  }
-})
+}
 ```
 
 ### Dependencies
 
 **Required:**
-- Story 6.1 (Story Theme Assets) - Background and character images
-- Story 6.3 (Narrative Content) - Intro and finale text
-- `react-confetti` - Finale celebration
-- `framer-motion` - Animations
+- ✅ Story 6.4c (base implementation)
+- IndexedDB setup from Story 6.2 (StoryProgressMachine)
 
 **Enables:**
-- Story 6.7 (Testing) - Will test intro/finale flow
+- Story 6.7 (Testing) - More comprehensive testing scenarios
 
 ### Testing
 
-**Testing Framework:** Vitest + React Testing Library
-**Test Locations:**
-- `/components/story/StoryIntroScreen.test.tsx`
-- `/components/story/StoryFinaleScreen.test.tsx`
-- `/__tests__/integration/story-intro-finale-flow.test.ts`
+**Test Framework:** Vitest + React Testing Library
 
-**Test Scenarios:**
+**New Test Files:**
+- `lib/game/calculate-session-stats.test.ts` - Unit tests for stats helper
+- `lib/hooks/useStoryIntro.test.ts` - Hook tests (optional)
+- `__tests__/story-intro-tracking.test.ts` - Integration tests
+- `__tests__/story-finale-stats.test.ts` - Integration tests
+
+**Updated Test Files:**
+- `components/story/StoryIntroScreen.test.tsx` - Add skip and word list name tests
+- `components/story/StoryFinaleScreen.test.tsx` - Add enhanced stats and third button tests
+
+## Implementation Notes
+
+### Skip Intro Button Design
+
+```tsx
+{/* Small, unobtrusive skip button */}
+<motion.button
+  onClick={onSkip}
+  className="absolute bottom-4 right-4 px-4 py-2 bg-gray-700/50 text-white text-sm rounded-lg hover:bg-gray-600/70 transition-colors"
+  whileHover={{ scale: 1.05 }}
+  whileTap={{ scale: 0.95 }}
+>
+  Skip Intro →
+</motion.button>
+```
+
+### Enhanced Stats Grid (5 stats)
+
+```tsx
+<div className="grid grid-cols-2 md:grid-cols-5 gap-4 mb-8">
+  <StatCard icon="📚" value={stats.totalWords} label="Total Words" />
+  <StatCard icon="✅" value={stats.wordsMastered} label="Mastered" />
+  <StatCard icon="🎮" value={stats.gamesPlayed} label="Games Played" />
+  <StatCard icon="⏱️" value={formatTime(stats.timeSpent)} label="Time Spent" />
+  <StatCard icon="⭐" value={`${Math.round(stats.averageConfidence * 100)}%`} label="Avg Score" />
+</div>
+```
+
+### Time Formatting Helper
+
 ```typescript
-describe('StoryIntroScreen', () => {
-  it('renders intro content', () => {
-    render(
-      <StoryIntroScreen
-        theme="space"
-        wordListName="My Words"
-        wordCount={10}
-        onBegin={vi.fn()}
-      />
-    )
+function formatTime(seconds: number): string {
+  const minutes = Math.floor(seconds / 60)
+  const remainingSeconds = seconds % 60
 
-    expect(screen.getByText(/Begin Your Journey/i)).toBeInTheDocument()
-    expect(screen.getByText(/10 words/i)).toBeInTheDocument()
-  })
-
-  it('calls onBegin when button clicked', async () => {
-    const mockOnBegin = vi.fn()
-    render(
-      <StoryIntroScreen
-        theme="space"
-        wordListName="My Words"
-        wordCount={10}
-        onBegin={mockOnBegin}
-      />
-    )
-
-    await userEvent.click(screen.getByText(/Let's Begin!/i))
-    expect(mockOnBegin).toHaveBeenCalled()
-  })
-})
-
-describe('StoryFinaleScreen', () => {
-  const mockStats = {
-    wordsMastered: 10,
-    gamesPlayed: 25,
-    timeSpent: 600,
-    totalWords: 10
+  if (minutes === 0) {
+    return `${seconds}s`
+  } else if (remainingSeconds === 0) {
+    return `${minutes}m`
+  } else {
+    return `${minutes}m ${remainingSeconds}s`
   }
-
-  it('renders finale content and stats', () => {
-    render(
-      <StoryFinaleScreen
-        theme="space"
-        wordListName="My Words"
-        stats={mockStats}
-        onPracticeMore={vi.fn()}
-        onTryNewWords={vi.fn()}
-        onViewProgress={vi.fn()}
-      />
-    )
-
-    expect(screen.getByText(/Mission Complete/i)).toBeInTheDocument()
-    expect(screen.getByText('10')).toBeInTheDocument() // Words mastered
-  })
-
-  it('all action buttons work', async () => {
-    const mockActions = {
-      onPracticeMore: vi.fn(),
-      onTryNewWords: vi.fn(),
-      onViewProgress: vi.fn()
-    }
-
-    render(
-      <StoryFinaleScreen
-        theme="space"
-        wordListName="My Words"
-        stats={mockStats}
-        {...mockActions}
-      />
-    )
-
-    await userEvent.click(screen.getByText(/Practice More/i))
-    expect(mockActions.onPracticeMore).toHaveBeenCalled()
-
-    await userEvent.click(screen.getByText(/Try New Words/i))
-    expect(mockActions.onTryNewWords).toHaveBeenCalled()
-
-    await userEvent.click(screen.getByText(/View Progress/i))
-    expect(mockActions.onViewProgress).toHaveBeenCalled()
-  })
-})
+}
 ```
-
-**Run Tests:**
-```bash
-npm run test
-```
-
-### Technical Constraints
-
-- Animations: Smooth, 60fps
-- Image loading: Preload to prevent flicker
-- Stats count-up: Engaging but not too slow (<3 seconds)
-- Mobile: Fully responsive, touch-friendly
-- Accessibility: Keyboard navigation, ARIA labels
-- Performance: No lag during transitions
 
 ## Change Log
 
 | Date | Version | Description | Author |
 |------|---------|-------------|--------|
-| 2025-10-20 | 1.0 | Initial story created | Sarah (PO) |
+| 2025-10-21 | 2.0 | Rewritten as enhancement story building on 6.4c | James (Dev) |
+| 2025-10-20 | 1.0 | Original draft (superseded) | Sarah (PO) |
 
 ## Dev Agent Record
 
