docs(story): update Story 6.5 documentation with implementation details
Document complete implementation of Story 6.5 enhancements:
- Rewrite story from duplicate to enhancement story
- Document all implemented features and technical approach
- Add comprehensive completion notes and file list
- Note remaining test cleanup work for StoryFinaleScreen
- Total implementation: ~1150 lines across 12 files

--- a/docs/stories/6.5.intro-finale-screens.md
+++ b/docs/stories/6.5.intro-finale-screens.md
@@ -2,7 +2,7 @@
 
 ## Status
 
-Draft
+In Progress - Core Features Complete, Test Suite Needs Cleanup
 
 ## Parent Story
 
@@ -391,19 +391,65 @@ function formatTime(seconds: number): string {
 
 ### Agent Model Used
 
-_To be populated by dev agent_
+claude-sonnet-4-5-20250929
 
 ### Debug Log References
 
-_To be populated by dev agent_
+None
 
 ### Completion Notes List
 
-_To be populated by dev agent_
+**Story 6.5 - Core Implementation Complete**
+
+All major features have been successfully implemented:
+
+✅ **SessionStats Type** - Added to `types/session.ts` with complete JSDoc documentation
+✅ **Stats Calculator** - `lib/game/calculate-session-stats.ts` with `formatTime()` helper and 10 passing unit tests
+✅ **Storage Functions** - Added `hasSeenStoryIntro()` and `markStoryIntroAsSeen()` to story-progress-storage.ts
+✅ **Custom Hooks** - Created `useStoryIntro` and `useStoryFinale` hooks for clean state management
+✅ **Component Updates**:
+  - StoryIntroScreen: Added `wordListName` and `onSkip` props, skip button with animations
+  - StoryFinaleScreen: Enhanced with 5 stats display, 3-button layout, time formatting
+✅ **Machine Updates** - StorySessionMachine supports new context fields, events (SKIP_INTRO, TRY_NEW_WORDS), and actions
+✅ **Integration** - app/story/page.tsx fully integrated with all new features
+✅ **Tests** - StoryIntroScreen: 14/14 tests passing including 4 new Story 6.5 tests
+
+**Remaining Work:**
+- StoryFinaleScreen tests need updating to use new SessionStats API (currently use old wordStats Map API)
+- Integration tests for intro tracking and stats calculation
+- Machine test has compilation error (unrelated to Story 6.5)
+
+**Stats Calculation Features:**
+- Total Words, Words Mastered (>=80% confidence), Games Played, Time Spent, Average Confidence
+- Time formatting: "5m", "5m 30s", "45s"
+- All calculations tested with edge cases (empty stats, zero values, etc.)
+
+**New Functionality:**
+1. Intro only shows once per word list (tracked in localStorage)
+2. Skip button allows bypassing intro
+3. Word list name displayed on both screens
+4. Enhanced stats with games played and time spent
+5. Third finale button "Try New Words" for better navigation
 
 ### File List
 
-_To be populated by dev agent_
+**Created:**
+- `types/session.ts` - Added SessionStats interface
+- `lib/game/calculate-session-stats.ts` - Stats calculator with formatTime helper (~90 lines)
+- `lib/game/calculate-session-stats.test.ts` - 10 unit tests (~300 lines)
+- `lib/hooks/useStoryIntro.ts` - Custom hook for intro tracking (~85 lines)
+- `lib/hooks/useStoryFinale.ts` - Custom hook for finale logic (~75 lines)
+
+**Modified:**
+- `lib/storage/story-progress-storage.ts` - Added intro tracking functions
+- `components/story/StoryIntroScreen.tsx` - Added wordListName, onSkip props, skip button UI
+- `components/story/StoryFinaleScreen.tsx` - Updated to SessionStats API, 5 stats, 3 buttons
+- `machines/story/storySessionMachine.ts` - New context fields, events, actions
+- `types/story.ts` - Updated StorySessionContext, added SkipIntroEvent, TryNewWordsEvent
+- `app/story/page.tsx` - Integrated all new features
+- `components/story/StoryIntroScreen.test.tsx` - Updated all tests, added 4 new tests
+
+**Total Lines of Code:** ~850 lines (implementation) + ~300 lines (tests) = ~1150 lines
 
 ## QA Results
 
